[gd_scene load_steps=21 format=3 uid="uid://bkyophtkdb8j0"]

[ext_resource type="Script" path="res://shop_phase/shop_screen.gd" id="1_cucrg"]
[ext_resource type="Texture2D" uid="uid://dspcl7a0owgiv" path="res://shop_phase/shop_bg.jpg" id="2_f3vft"]
[ext_resource type="Texture2D" uid="uid://cp8sf6k2tcl3w" path="res://shop_phase/door.jpg" id="3_k7yob"]
[ext_resource type="Script" path="res://shop_phase/revelar/revelar.gd" id="4_ih61s"]
[ext_resource type="Texture2D" uid="uid://hxxdt6owgm07" path="res://shop_phase/revelar/pila.png" id="5_41buq"]
[ext_resource type="FontFile" uid="uid://b5crpuqkswlg1" path="res://Take Coffee.otf" id="6_xlygv"]
[ext_resource type="Texture2D" uid="uid://f8ywhg84c2xp" path="res://shop_phase/revelar/plain-arrow.png" id="8_xefhv"]
[ext_resource type="Texture2D" uid="uid://ciljgi25tylkd" path="res://shop_phase/assets/artifacts/fire.png" id="9_6cejk"]
[ext_resource type="Script" path="res://shop_phase/comercio/comercio.gd" id="10_de67e"]
[ext_resource type="Texture2D" uid="uid://drax4cwyskejl" path="res://shop_phase/comercio/merchant.jpg" id="11_6u42a"]
[ext_resource type="Texture2D" uid="uid://bd5qd5tcy80re" path="res://shop_phase/comercio/bubble_speech.jpg" id="12_k71yt"]
[ext_resource type="Script" path="res://shop_phase/drag_and_drop/drop_panel.gd" id="13_sgr8j"]
[ext_resource type="Texture2D" uid="uid://8kqv0saff7c0" path="res://shop_phase/assets/artifacts/moderna.png" id="14_hde4a"]
[ext_resource type="PackedScene" uid="uid://v0e8tgdnvrxc" path="res://shop_phase/drag_and_drop/card_slot.tscn" id="15_qxd5o"]
[ext_resource type="Script" path="res://shop_phase/tasar/tasar.gd" id="16_3yycg"]
[ext_resource type="Texture2D" uid="uid://c2hvuhdfxi2lq" path="res://shop_phase/tasar/tasar.png" id="17_id0k1"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_lia3d"]
load_path = "res://.godot/imported/armor-t2.png-2dba06ff05a32997b9cb23e427a9d911.ctex"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d7ha1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s5mll"]
bg_color = Color(0.380392, 0.0392157, 0.454902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4vwab"]
bg_color = Color(0.6, 0.6, 0.6, 0.458824)

[node name="Shop" type="Control" node_paths=PackedStringArray("butt_revelar", "butt_comercio", "butt_tasar", "butt_volver", "butt_door", "text_state", "revelar_menu", "comercio_menu", "tasar_menu")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cucrg")
butt_revelar = NodePath("BaseUI/HBoxC-bottmenu/ButtRevelar")
butt_comercio = NodePath("BaseUI/HBoxC-bottmenu/ButtComercio")
butt_tasar = NodePath("BaseUI/HBoxC-bottmenu/ButtTasar")
butt_volver = NodePath("BaseUI/HBoxC-bottmenu/ButtVolver")
butt_door = NodePath("ButtDoor")
text_state = NodePath("BaseUI/HBoxC-topmenu/MargCInfo/LabelState")
revelar_menu = NodePath("Revelar")
comercio_menu = NodePath("Comercio")
tasar_menu = NodePath("Tasar")
loot_scene = "res://loot_phase/loot_main_screen.tscn"
end_scene = "res://general_phase/end_screen.tscn"

[node name="BGShop" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1400.0
offset_bottom = 1048.0
texture = ExtResource("2_f3vft")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="ButtDoor" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 608.0
offset_top = 488.0
offset_right = 816.0
offset_bottom = 776.0
focus_mode = 0
texture_normal = ExtResource("3_k7yob")
ignore_texture_size = true
stretch_mode = 0

[node name="BaseUI" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxC-topmenu" type="HBoxContainer" parent="BaseUI"]
layout_mode = 1
anchors_preset = -1
anchor_right = 35.0
anchor_bottom = 3.2
theme_override_constants/separation = 0

[node name="MargCLibro" type="MarginContainer" parent="BaseUI/HBoxC-topmenu"]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_right = 64

[node name="ButtLibro" type="Button" parent="BaseUI/HBoxC-topmenu/MargCLibro"]
custom_minimum_size = Vector2(64, 128)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "LIBRO"

[node name="MargCInv" type="MarginContainer" parent="BaseUI/HBoxC-topmenu"]
layout_mode = 2
theme_override_constants/margin_left = 64

[node name="ButtInv" type="Button" parent="BaseUI/HBoxC-topmenu/MargCInv"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
focus_mode = 0
text = "INVENTARIO"

[node name="MargCInfo" type="MarginContainer" parent="BaseUI/HBoxC-topmenu"]
layout_mode = 2
theme_override_constants/margin_left = 256
theme_override_constants/margin_right = 384

[node name="LabelState" type="Label" parent="BaseUI/HBoxC-topmenu/MargCInfo"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "INFORMATION
GOLD
ZONE"
horizontal_alignment = 1

[node name="MargCSett" type="MarginContainer" parent="BaseUI/HBoxC-topmenu"]
layout_mode = 2

[node name="ButtSett" type="Button" parent="BaseUI/HBoxC-topmenu/MargCSett"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
focus_mode = 0
text = "AJUSTES"

[node name="HBoxC-bottmenu" type="HBoxContainer" parent="BaseUI"]
layout_mode = 1
anchors_preset = -1
anchor_top = 22.4
anchor_right = 35.0
anchor_bottom = 26.2
offset_top = -6.10352e-05
theme_override_constants/separation = 256
alignment = 1

[node name="ButtRevelar" type="Button" parent="BaseUI/HBoxC-bottmenu"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "REVELAR"

[node name="ButtComercio" type="Button" parent="BaseUI/HBoxC-bottmenu"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "COMERCIO"

[node name="ButtTasar" type="Button" parent="BaseUI/HBoxC-bottmenu"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "TASAR"

[node name="ButtVolver" type="Button" parent="BaseUI/HBoxC-bottmenu"]
visible = false
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "VOLVER PRINCIPAL"

[node name="Revelar" type="Control" parent="." node_paths=PackedStringArray("butt_loot", "panel_ui", "text_total_loot", "text_artifact_name", "texture_loot_bag", "texture_artifact")]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_ih61s")
butt_loot = NodePath("RevelarLeft")
panel_ui = NodePath("Panel")
text_total_loot = NodePath("RevelarLeft/TotalLoot")
text_artifact_name = NodePath("Panel/ArtifactName")
texture_loot_bag = NodePath("Panel/TextureLoot")
texture_artifact = NodePath("Panel/TextureArtifact")

[node name="RevelarLeft" type="TextureButton" parent="Revelar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.6
anchor_top = 5.6
anchor_right = 16.2
anchor_bottom = 21.8
offset_top = -1.52588e-05
offset_bottom = -6.10352e-05
focus_mode = 0
texture_normal = ExtResource("5_41buq")

[node name="TotalLoot" type="Label" parent="Revelar/RevelarLeft"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.431
anchor_top = -0.062
anchor_right = 0.554
offset_left = -0.256012
offset_top = -0.32
offset_right = -0.104004
offset_bottom = -2.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("6_xlygv")
theme_override_font_sizes/font_size = 32
text = "x100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="Revelar"]
visible = false
layout_mode = 0
offset_left = 832.0
offset_top = 576.0
offset_right = 1216.0
offset_bottom = 704.0

[node name="ArtifactName" type="Label" parent="Revelar/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "ESPADA MUY MOLONA CON UN NOMBRE LARGO"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1
uppercase = true
max_lines_visible = 2

[node name="TextureLoot" type="TextureRect" parent="Revelar/Panel"]
layout_mode = 0
offset_top = -256.0
offset_right = 128.0
offset_bottom = -128.0
texture = SubResource("CompressedTexture2D_lia3d")
stretch_mode = 2

[node name="TextureArrow" type="TextureRect" parent="Revelar/Panel"]
layout_mode = 0
offset_left = 144.0
offset_top = -224.0
offset_right = 208.0
offset_bottom = -160.0
texture = ExtResource("8_xefhv")
expand_mode = 1

[node name="TextureArtifact" type="TextureRect" parent="Revelar/Panel"]
layout_mode = 0
offset_left = 256.0
offset_top = -256.0
offset_right = 384.0
offset_bottom = -128.0
texture = ExtResource("9_6cejk")

[node name="ButtContinue" type="Button" parent="Revelar/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 7.0
anchor_top = 2.2
anchor_right = 7.0
anchor_bottom = 2.2
offset_left = -2688.0
offset_top = -137.6
offset_right = -2304.0
offset_bottom = -89.6
focus_mode = 0
text = "CONTINUAR"

[node name="Comercio" type="Control" parent="." node_paths=PackedStringArray("panel_comercio", "panel_drop_artifact", "panel_kick", "panel_merchant", "scroll_cards", "grid_cards", "bar_patience", "text_merchant", "texture_artifact", "context_sold", "text_sold", "context_failed", "text_failed")]
visible = false
anchors_preset = 0
script = ExtResource("10_de67e")
panel_comercio = NodePath("ComercioPanel")
panel_drop_artifact = NodePath("DropPanel")
panel_kick = NodePath("KickPanel")
panel_merchant = NodePath("ComercioLeft")
scroll_cards = NodePath("ComercioPanel/ScrollCCards")
grid_cards = NodePath("ComercioPanel/ScrollCCards/GridCCards")
bar_patience = NodePath("PacienciaBar")
text_merchant = NodePath("ComercioLeft/BubbleSpeech/TextReaction")
texture_artifact = NodePath("ComercioPanel/TextureArtifact")
context_sold = NodePath("ComercioPanel/Sold")
text_sold = NodePath("ComercioPanel/Sold/TextSold")
context_failed = NodePath("ComercioPanel/Failed")
text_failed = NodePath("ComercioPanel/Failed/TextFailed")

[node name="ComercioLeft" type="TextureRect" parent="Comercio"]
layout_mode = 0
offset_left = 128.0
offset_top = 320.0
offset_right = 384.0
offset_bottom = 894.0
texture = ExtResource("11_6u42a")

[node name="BubbleSpeech" type="TextureRect" parent="Comercio/ComercioLeft"]
layout_mode = 0
offset_left = 192.0
offset_top = -160.0
offset_right = 448.0
offset_bottom = 96.0
texture = ExtResource("12_k71yt")
expand_mode = 1

[node name="TextReaction" type="Label" parent="Comercio/ComercioLeft/BubbleSpeech"]
layout_mode = 0
offset_left = 24.0
offset_top = 16.0
offset_right = 232.0
offset_bottom = 192.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "HI!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="DropPanel" type="Panel" parent="Comercio"]
layout_mode = 0
offset_left = 768.0
offset_top = 192.0
offset_right = 1280.0
offset_bottom = 832.0
script = ExtResource("13_sgr8j")

[node name="TextInfo" type="Label" parent="Comercio/DropPanel"]
layout_mode = 0
offset_right = 512.0
offset_bottom = 640.0
theme_override_font_sizes/font_size = 32
text = "ARRASTRA AQUI EL ARTEFACTO CON EL QUE QUIERES COMERCIAR"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="KickPanel" type="Panel" parent="Comercio"]
visible = false
layout_mode = 0
offset_left = 768.0
offset_top = 192.0
offset_right = 1280.0
offset_bottom = 832.0

[node name="TextInfo" type="Label" parent="Comercio/KickPanel"]
layout_mode = 0
offset_right = 512.0
offset_bottom = 512.0
theme_override_font_sizes/font_size = 32
text = "SEGURO QUE QUIERES HECHAR AL COMERCIANTE?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ButtYes" type="Button" parent="Comercio/KickPanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.8
anchor_right = 0.5
anchor_bottom = 1.0
focus_mode = 0
theme_override_font_sizes/font_size = 32
text = "LEAVE"

[node name="ButtNo" type="Button" parent="Comercio/KickPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
theme_override_font_sizes/font_size = 32
text = "STAY"

[node name="ComercioPanel" type="Panel" parent="Comercio"]
visible = false
layout_mode = 0
offset_left = 768.0
offset_top = 192.0
offset_right = 1280.0
offset_bottom = 832.0

[node name="TextureArtifact" type="TextureRect" parent="Comercio/ComercioPanel"]
layout_mode = 0
offset_left = 320.0
offset_right = 512.0
offset_bottom = 128.0
texture = ExtResource("14_hde4a")

[node name="TextComercioCon" type="Label" parent="Comercio/ComercioPanel"]
layout_mode = 0
offset_right = 320.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 32
text = "COMERCIANDO CON:"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HCDropZone" type="HBoxContainer" parent="Comercio/ComercioPanel"]
layout_mode = 0
offset_top = 128.0
offset_right = 512.0
offset_bottom = 256.0
theme_override_constants/separation = 0
alignment = 1

[node name="CardSlot" parent="Comercio/ComercioPanel/HCDropZone" instance=ExtResource("15_qxd5o")]
visible = false
layout_mode = 2

[node name="CardSlot2" parent="Comercio/ComercioPanel/HCDropZone" instance=ExtResource("15_qxd5o")]
visible = false
layout_mode = 2

[node name="CardSlot3" parent="Comercio/ComercioPanel/HCDropZone" instance=ExtResource("15_qxd5o")]
visible = false
layout_mode = 2

[node name="CardSlot4" parent="Comercio/ComercioPanel/HCDropZone" instance=ExtResource("15_qxd5o")]
visible = false
layout_mode = 2

[node name="ScrollCCards" type="ScrollContainer" parent="Comercio/ComercioPanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridCCards" type="GridContainer" parent="Comercio/ComercioPanel/ScrollCCards"]
layout_mode = 2
columns = 4

[node name="Sold" type="Control" parent="Comercio/ComercioPanel"]
visible = false
layout_mode = 1
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextSold" type="Label" parent="Comercio/ComercioPanel/Sold"]
layout_mode = 0
offset_right = 512.0
offset_bottom = 256.0
theme_override_font_sizes/font_size = 32
text = "CONGRATULATIONS! SOLD FOR 100 GOLD"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="ButtSold" type="Button" parent="Comercio/ComercioPanel/Sold"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.667
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.128021
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "PRESS HERE TO CONTINUE"

[node name="Failed" type="Control" parent="Comercio/ComercioPanel"]
visible = false
layout_mode = 1
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextFailed" type="Label" parent="Comercio/ComercioPanel/Failed"]
layout_mode = 0
offset_right = 512.0
offset_bottom = 256.0
theme_override_font_sizes/font_size = 32
text = "SOLD THE ARTIFACT AT THE LOWEST PRICE, 10 GOLD. BETTER LUCK NEXT TIME"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="ButtFailed" type="Button" parent="Comercio/ComercioPanel/Failed"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.667
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.128021
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "PRESS HERE TO CONTINUE"

[node name="PacienciaBar" type="ProgressBar" parent="Comercio"]
visible = false
layout_mode = 0
offset_left = 64.0
offset_top = 264.0
offset_right = 256.0
offset_bottom = 291.0
theme_override_styles/background = SubResource("StyleBoxFlat_d7ha1")
theme_override_styles/fill = SubResource("StyleBoxFlat_s5mll")
step = 1.0
rounded = true

[node name="PacienciaLabel" type="Label" parent="Comercio/PacienciaBar"]
layout_mode = 1
anchors_preset = -1
anchor_top = -1.185
anchor_right = 1.0
anchor_bottom = -0.222
offset_top = -0.00499916
offset_bottom = -0.00599957
grow_horizontal = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_4vwab")
text = "PACIENCIA:"
horizontal_alignment = 1

[node name="TextNoMerchant" type="Label" parent="Comercio"]
visible = false
layout_mode = 0
offset_left = 64.0
offset_top = 192.0
offset_right = 1288.0
offset_bottom = 832.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "THE MERCHANT HAS LEFT... BUT HE WILL BE BACK AFTER YOUR ADVENTURES!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Tasar" type="Control" parent="." node_paths=PackedStringArray("panel_tasar", "panel_drop_artifact", "context_complete", "container_book_entry_complete", "context_valid", "container_book_entry_valid", "text_valid", "context_reveal", "icon_reveal")]
visible = false
anchors_preset = 0
script = ExtResource("16_3yycg")
panel_tasar = NodePath("TasarPanel")
panel_drop_artifact = NodePath("DropPanel")
context_complete = NodePath("TasarPanel/Completado")
container_book_entry_complete = NodePath("TasarPanel/Completado/ContenedorLibroEntry")
context_valid = NodePath("TasarPanel/Valid")
container_book_entry_valid = NodePath("TasarPanel/Valid/ContenedorLibroEntry")
text_valid = NodePath("TasarPanel/Valid/TextPrice")
context_reveal = NodePath("TasarPanel/Reveal")
icon_reveal = NodePath("TasarPanel/Reveal/CardIcon")

[node name="TasarLeft" type="TextureRect" parent="Tasar"]
layout_mode = 0
offset_left = 64.0
offset_top = 256.0
offset_right = 512.0
offset_bottom = 832.0
texture = ExtResource("17_id0k1")
expand_mode = 1

[node name="DropPanel" type="Panel" parent="Tasar"]
layout_mode = 0
offset_left = 768.0
offset_top = 256.0
offset_right = 1344.0
offset_bottom = 832.0
script = ExtResource("13_sgr8j")

[node name="TextInfo" type="Label" parent="Tasar/DropPanel"]
layout_mode = 0
offset_right = 576.0
offset_bottom = 576.0
theme_override_font_sizes/font_size = 32
text = "Arrastra un objeto aqui para tasarlo"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="TasarPanel" type="Panel" parent="Tasar"]
visible = false
layout_mode = 0
offset_left = 768.0
offset_top = 256.0
offset_right = 1344.0
offset_bottom = 832.0

[node name="Completado" type="Control" parent="Tasar/TasarPanel"]
visible = false
layout_mode = 1
anchor_top = 0.222
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -127.872
grow_horizontal = 2
grow_vertical = 2

[node name="ContenedorLibroEntry" type="PanelContainer" parent="Tasar/TasarPanel/Completado"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.222
offset_bottom = 0.127991

[node name="TextCompleted" type="Label" parent="Tasar/TasarPanel/Completado"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.222
anchor_right = 1.0
anchor_bottom = 0.778
offset_top = 0.127991
offset_bottom = -64.128
theme_override_font_sizes/font_size = 32
text = "YA CONOCES EL ENCANTO DE ESTE ARTEFACTO!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TextWarning" type="Label" parent="Tasar/TasarPanel/Completado"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.667
anchor_right = 1.0
anchor_bottom = 0.778
offset_top = -0.192017
offset_bottom = -0.128021
text = "Si no está en tu libro quizás se te ha sido revelado con anterioridad..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ButtCompleted" type="Button" parent="Tasar/TasarPanel/Completado"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.778
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.128021
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "DE ACUERDO"

[node name="Valid" type="Control" parent="Tasar/TasarPanel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContenedorLibroEntry" type="PanelContainer" parent="Tasar/TasarPanel/Valid"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.222
offset_bottom = 0.127991

[node name="TextPrice" type="Label" parent="Tasar/TasarPanel/Valid"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.222
anchor_right = 1.0
anchor_bottom = 0.778
offset_top = 0.127991
offset_bottom = -0.128021
theme_override_font_sizes/font_size = 32
text = "Tasar este artefacto te costara 100 gold"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="ButtTasar" type="Button" parent="Tasar/TasarPanel/Valid"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.778
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.128021
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "TASAR!"

[node name="Reveal" type="Control" parent="Tasar/TasarPanel"]
visible = false
layout_mode = 1
anchor_top = 0.222
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -127.872
grow_horizontal = 2
grow_vertical = 2

[node name="TextReveal" type="Label" parent="Tasar/TasarPanel/Reveal"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.286
offset_bottom = 27.264
theme_override_font_sizes/font_size = 32
text = "se te ha revelado el siguiente encanto:"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="CardIcon" type="TextureRect" parent="Tasar/TasarPanel/Reveal"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.389
anchor_top = 0.333
anchor_right = 0.611
anchor_bottom = 0.556
offset_left = -0.0640106
offset_top = 0.192001
offset_right = 0.0639954
offset_bottom = -0.256042

[node name="TextWarning" type="Label" parent="Tasar/TasarPanel/Reveal"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.667
anchor_right = 1.0
anchor_bottom = 0.778
offset_top = -0.192017
offset_bottom = -0.128021
text = "Cuidado! Has de recordar este encanto porque tasar no lo revela en tu libro."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ButtReveal" type="Button" parent="Tasar/TasarPanel/Reveal"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.778
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.128021
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "DE ACUERDO"

[connection signal="button_up" from="ButtDoor" to="." method="_on_butt_door_up"]
[connection signal="button_up" from="BaseUI/HBoxC-topmenu/MargCLibro/ButtLibro" to="." method="_on_butt_libro_button_up"]
[connection signal="button_up" from="BaseUI/HBoxC-topmenu/MargCInv/ButtInv" to="." method="_on_butt_inv_button_up"]
[connection signal="button_up" from="BaseUI/HBoxC-bottmenu/ButtRevelar" to="." method="_on_butt_revelar_button_up"]
[connection signal="button_up" from="BaseUI/HBoxC-bottmenu/ButtComercio" to="." method="_on_butt_comercio_button_up"]
[connection signal="button_up" from="BaseUI/HBoxC-bottmenu/ButtTasar" to="." method="_on_butt_tasar_button_up"]
[connection signal="button_up" from="BaseUI/HBoxC-bottmenu/ButtVolver" to="." method="_on_butt_volver_button_up"]
[connection signal="button_up" from="Revelar/RevelarLeft" to="Revelar" method="_on_revelar_left_button_up"]
[connection signal="button_up" from="Revelar/Panel/ButtContinue" to="Revelar" method="_on_butt_continue_up"]
[connection signal="game_over" from="Comercio" to="." method="_on_comercio_game_over"]
[connection signal="artifact_dropped" from="Comercio/DropPanel" to="Comercio" method="_on_drop_panel_begin_phase"]
[connection signal="button_up" from="Comercio/KickPanel/ButtYes" to="Comercio" method="_on_butt_leave_up"]
[connection signal="button_up" from="Comercio/KickPanel/ButtNo" to="Comercio" method="_on_butt_stay_up"]
[connection signal="card_tried" from="Comercio/ComercioPanel/HCDropZone/CardSlot" to="Comercio" method="_on_drop_card_1_card_try"]
[connection signal="card_tried" from="Comercio/ComercioPanel/HCDropZone/CardSlot2" to="Comercio" method="_on_drop_card_2_card_try"]
[connection signal="card_tried" from="Comercio/ComercioPanel/HCDropZone/CardSlot3" to="Comercio" method="_on_drop_card_3_card_try"]
[connection signal="card_tried" from="Comercio/ComercioPanel/HCDropZone/CardSlot4" to="Comercio" method="_on_drop_card_4_card_try"]
[connection signal="button_up" from="Comercio/ComercioPanel/Sold/ButtSold" to="Comercio" method="_on_butt_sold_button_up"]
[connection signal="button_up" from="Comercio/ComercioPanel/Failed/ButtFailed" to="Comercio" method="_on_butt_failed_button_up"]
[connection signal="artifact_dropped" from="Tasar/DropPanel" to="Tasar" method="_on_drop_panel_begin_phase"]
[connection signal="button_up" from="Tasar/TasarPanel/Completado/ButtCompleted" to="Tasar" method="_on_butt_completed_up"]
[connection signal="button_up" from="Tasar/TasarPanel/Valid/ButtTasar" to="Tasar" method="_on_butt_tasar_up"]
[connection signal="button_up" from="Tasar/TasarPanel/Reveal/ButtReveal" to="Tasar" method="_on_butt_reveal_up"]
